--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="logo">
             <h1>BFit Fitness</h1>
         </div>
-        <section id="Intro">
+        <section id="intro">
             <h2>Welcome to BFit!</h2>
         <p>Welcome to the BFit fitness web application! This application was created to help users improve their health and stay on track with their fitness goals. Here you can calculate your Body Mass Index (BMI), log your calories, and take steps towards a healthier lifestyle.</p>
         </section>
