--- a/calories.html
+++ b/calories.html
@@ -13,9 +13,9 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="bmi.html">BMI Calculator</a></li>
-            <li><a href="calories.html">Calorie Tracker</a></li>
+            <li><a href="home/index.html">Home</a></li>
+            <li><a href="home/bmi.html">BMI Calculator</a></li>
+            <li><a href="home/calories.html">Calorie Tracker</a></li>
         </ul>
     </nav>
 
