--- a/calories.html
+++ b/calories.html
@@ -5,7 +5,7 @@
     <title>Calorie Tracker - BFit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="calorie-page">
 
     <div class="logo">
         <h1>BFit Fitness</h1>
@@ -21,6 +21,8 @@
 
     <section id="Calorie-section">
         <h2>Calorie Tracker</h2>
+
+        <img src="food_chart_img.jpg" alt="Balanced food chart" class="page-image bottom-right">
 
         <label for="food">Food Item:</label>
         <input type="text" id="food" placeholder="Food Item">
