--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </div>
         <section id="intro">
             <h2>Welcome to BFit!</h2>
+        <img src="images/healthy_lifestyle_img.png" alt="Healthy lifestyle" class="page-image">
         <p>Welcome to the BFit fitness web application! This application was created to help users improve their health and stay on track with their fitness goals. Here you can calculate your Body Mass Index (BMI), log your calories, and take steps towards a healthier lifestyle.</p>
         </section>
         <nav>
