--- a/bmi.html
+++ b/bmi.html
@@ -5,7 +5,7 @@
     <title>BMI Calculator - BFit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bmi-page">
 
     <div class="logo">
         <h1>BFit Fitness</h1>
@@ -21,6 +21,8 @@
 
     <section id="BMI-section">
         <h2>BMI Calculator</h2>
+
+        <img src="calculator_img.png" alt="Calculator" class="page-image bottom-right">
 
         <label for="feet">Height:</label>
         <input type="number" id="feet" placeholder="Feet">
