--- a/bmi.html
+++ b/bmi.html
@@ -22,7 +22,7 @@
     <section id="BMI-section">
         <h2>BMI Calculator</h2>
 
-        <img src="calculator_img.png" alt="Calculator" class="page-image bottom-right">
+        <img src="img/calculator_img.png" alt="Calculator" class="page-image bottom-right">
 
         <label for="feet">Height:</label>
         <input type="number" id="feet" placeholder="Feet">
