--- a/calories.html
+++ b/calories.html
@@ -22,7 +22,7 @@
     <section id="Calorie-section">
         <h2>Calorie Tracker</h2>
 
-        <img src="img/food_chart_img.jpg" alt="Balanced food chart" class="page-image bottom-right">
+        <img src="img/food_chart_img.jpg" alt="Balanced food chart" class="page-image">
 
         <label for="food">Food Item:</label>
         <input type="text" id="food" placeholder="Food Item">
