--- a/bmi.html
+++ b/bmi.html
@@ -11,7 +11,7 @@
         <h1>BFit Fitness</h1>
     </div>
 
-    <img src="img/calculator_img.png" alt="Calculator" class="page-image">
+    <img src="https://cdn.pixabay.com/photo/2020/03/10/17/09/calculator-4919597_1280.png" alt="Calculator" class="page-image">
 
     <nav>
         <ul>
