--- a/calories.html
+++ b/calories.html
@@ -11,7 +11,7 @@
         <h1>BFit Fitness</h1>
     </div>
 
-    <img src="img/food_chart_img.jpg" alt="Balanced food chart" class="page-image">
+    <img src="https://images.template.net/121158/food-circle-chart-3bio1.jpg" alt="Balanced food chart" class="page-image">
 
     <nav>
         <ul>
